finished crontab check script and cron scheduling

--- a/deployment/templates/update.j2
+++ b/deployment/templates/update.j2
@@ -1,4 +1,4 @@
 #!/usr/bin/bash
 
-sudo apt-get update -y
-sudo apt-get upgrade -y
+sudo apt-get update -y > /var/log/update_script.log
+sudo apt-get upgrade -y >> /var/log/update_script.log
